manifests/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-router
  namespace: graphql-router
spec:
  selector:
    app: graphql-router
  ports:
    - name: web
      port: 4000
      targetPort: 4000
